# rust-mcp-playground

./: .gitignore  CLAUDE.md  README.md
notes/: Introducing MCP.md  Rust Agentic AI.md  Rust MCP SDK.md
projects/: README.md
projects/client/: Cargo.toml
projects/client/src/: main.rs
projects/servers/calculator/: Cargo.toml
projects/servers/calculator/src/: main.rs
