[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.2.1", features = ["client", "transport-child-process"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
] }
clap = { version = "4.0", features = ["derive", "env"] }
crossterm = "0.27"
futures = "0.3"
dotenvy = "0.15"
